# antiquake-rs

./: .gitignore  BUGS.md  COLLISION.md  CONTRIBUTIONS.ms  Cargo.toml  DEVNOTES.md  GAME_DESIGN.md  MODDING.md  NETWORKING.md  PROGS.md  README.md  SHADERNOTES.md  last-shader.wgsl
id1/: slime.json  slime.toml
id1/q2_test/: legal.txt  readme.htm  readme.txt
id1/q2_test/baseq2/: config.cfg
id1/scripts/: build_level.lua  ogre.toml  weapons.toml  world.toml
shaders/: alias.wgsl  brush.wgsl  deferred.wgsl  glyph.wgsl  particle.wgsl  postprocess.wgsl
shaders/ref/: goldsrc.wgsl
src/: cuberender.rs  framework.rs  lib.rs  main.rs  main_old.rs
src/bsp/: mod.rs
src/client/: mod.rs  state.rs  view.rs
src/client/input/: game.rs  mod.rs
src/client/menu/: mod.rs
src/client/render/: blit.rs  cvars.rs  mod.rs  pipeline.rs  target.rs  uniform.rs
src/client/render/ui/: glyph.rs  mod.rs  quad.rs
src/client/render/world/: alias.rs  brush.rs  deferred.rs  mod.rs  particle.rs  postprocess.rs  sprite.rs
src/client/sound/: music.rs
src/client/unit/: mod.rs  particle.rs
src/common/: alloc.rs  cvars.rs  host.rs  math.rs  mod.rs  model.rs  pak.rs  phys.rs  pk3.rs  tickcounter.rs  vfs.rs
src/common/bsp/: load.rs  mod.rs
src/common/gamestate/: entity.rs  mod.rs
src/common/gamestate/component/: mod.rs  particle.rs  physics.rs  rendermodel.rs  staticcollisionhull.rs
src/common/gamestate/resource/: bspcollision.rs  mod.rs
src/common/gamestate/system/: mod.rs  physics.rs
src/common/net/: connect.rs  mod.rs  server.rs
src/parse/: mod.rs
src/render/: framework.rs  mod.rs
src/render/renderspace/: cube.rs  level.rs  mod.rs
src/server/: levelstate.rs  mod.rs  precache.rs
src/server/progs/: mod.rs  string_table.rs
src/server/scripts/: mod.rs
src/server/slime/: context.rs  mod.rs  slime.md
src/server/world/: entity.rs  mod.rs  phys.rs
src/soulrender/: mod.rs
